# fantasyGameEngine

./: .gitignore  CMakeLists.txt  README.md
cmake/: macro.cmake
cmake/modules/: FindASSIMP.cmake  FindGLEW.cmake  FindGLFW.cmake  FindGLM.cmake  FindJSONCPP.cmake  FindSFML.cmake  FindSPDLOG.cmake  FindSample.cmake  Findpng++.cmake
geometric_data/: floor-small.det  floor-small.pcl  floor.det  floor.pcl  jamestop.pcl  mbase.det  ramp.det  rect.det  redcar.det  redcar.pcl  rook.d
src/: BoostLoggingMacro.hpp  CMakeLists.txt  DisplayManager.cpp  DisplayManager.hpp  FragmentShaderType.hpp  GLHandler.cpp  GLHandler.hpp  GLRenderContext.hpp  Image.cpp  Image.hpp  ImageLoader.cpp  ImageLoader.hpp  Loader.cpp  Loader.hpp  MainGameLoop.cpp  RawModel.hpp  Renderer.cpp  Renderer.hpp  Shader.hpp  ShaderProgram.cpp  ShaderProgram.hpp  ShaderType.hpp  StaticShader.cpp  StaticShader.hpp  VectorUtil.hpp  VertexShaderType.hpp  file_system_utils.hpp  gl_handler.cpp  gl_handler.hpp  gl_platform.cpp  gl_platform.hpp  shader_loader.cpp  shader_loader.hpp  shaderloader.cpp  shaderloader.hpp
src/bufferHandler/: BufferHandler.hpp  CubeHandler.cpp  CubeHandler.hpp  EBO_sample_handler.cpp  EBO_sample_handler.hpp  Simple_triangle_handler.cpp  Simple_triangle_handler.hpp
src/entities/: Camera.cpp  Camera.hpp  Entity.cpp  Entity.hpp
src/glad/: glad.c  glad.h
src/model/: Mesh.cpp  Mesh.hpp  MeshV2.cpp  MeshV2.hpp  Model.hpp  Vertex.cpp  Vertex.hpp
src/modelLoader/: AssimpModelLoader.cpp  AssimpModelLoader.hpp  WavefrontLoader.cpp  WavefrontLoader.hpp
src/models/: RawModel.cpp  TexturedModel.cpp  TexturedModel.hpp
src/resources/shaders/: basic.fs.glsl  basic.vs.glsl  basic2.fs.glsl  basic2.vs.glsl  basic3.fs.glsl  sample330.vs.glsl
src/shaders/: basic.fs.glsl  basic.vs.glsl  basic3.fs.glsl  basic3.vs.glsl  sample.fs.glsl  sample.vs.glsl  sample330.fs.glsl
src/texture/: ModelTexture.cpp  ModelTexture.hpp
src/toolbox/: DebugHelper.cpp  DebugHelper.hpp  Maths.cpp  Maths.hpp
src/tutorial/: glfw_tutorial.cpp
test/: AssimpTest.cpp  BoostLogSampleTest.cpp  BoostLogTest.cpp  CMakeLists.txt  MeshTest.cpp  ShaderLoaderTest.cpp
